fixed truncate function

--- a/src/styles/layout/_browse.scss
+++ b/src/styles/layout/_browse.scss
@@ -133,7 +133,7 @@
         width: fit-content;
 
         figure {
-          width: 15px;
+          width: 13px;
           height: 15px;
           display: flex;
           align-items: center;
